# c-testing

./: .stat  2q  Makefile
Nebula/Enum/: Makefile  main.cpp  test
abandoned/js/: Makefile  config.h
amhello/: Makefile.in  config.status
amhello/autom4te.cache/: output.0  traces.1
amhello/src/: Makefile  Makefile.in  hello
amhellolib/: configure.ac
amhellolib/src/: Makefile.am  hello.h
apps/: .stat
apps/SAP/: SAP.hpp  main.cpp
apps/cfd/: Makefile  cfd  main.cpp
apps/equ/: Makefile  README.md  add.hpp  decl.hpp  eq.hpp  equ  (+6 more)
basic/: Makefile  initializer_list  initializer_list.cpp
bitwise_test/: bw.cpp
c/: README.md
compiling/cmake/cpack/: CMakeLists.txt
csv_test/: c
csvread/: csvread.h
derived_alloc_test/: main  main.cpp
dumb_smart_ptrs/: main.cpp
equ/: Makefile
fmod_test/: m  main.cpp
funcsig/: main.cpp
gnuplot/: test
io_overload/: main.cpp
make_test/: foo.h
mat_in/: mat_in.cpp
math/: perm  perm.cpp
openal/: Makefile  test
pipes/: hello.cpp
preprocessor/: main.cpp  test
projects/abandoned/js/: README.md  configure.ac
projects/abandoned/js/inc/JSL/: device.h
projects/abandoned/js/src/: mouse.cpp
projects/abandoned/js/src/js/: Event.h  axes_abs.h  device.cpp  device.h
projects/abandoned/js/src/old/prog-1/: blue.cpp  main.cpp
python/: test
ref_member/: Makefile  m  main.cpp
shell_pipe/: Makefile  main.c  main.py  test
std2/: main.cpp
struct_test/: main.cpp
template_mem/: main.cpp
terminal/: test
test_gnuplot/: main.c  myfifo
thread_1/: thread_1
variadic/: Makefile  test
verbosity/: test
(+798 files in other folders)
