AC_INIT([amhellolib], [1.0], [bug-automake@gnu.org])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CXX
AC_LANG_PUSH([C++])

AC_PROG_RANLIB
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_OUTPUT

#AX_CHECK_COMPILE_FLAG([-std=c++0x],[CXXFLAGS="$CXXFLAGS -std=c++0x"])
#AX_CXX_COMPILE_STDCXX_11(,[mandatory])



